kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ai-farming
  annotations:
    kubernetes.io/ingress.class: "nginx"
  #   # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aifarming.tech
    - www.aifarming.tech
    secretName: aifarming.tech-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ai-farming-backend-service
            port:
              number: 8080
  # - host: www.aifarming.tech 
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: frontend-service
  #           port:
  #             number: 80
  #     - path: /api
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: ai-farming-backend-service
  #           port:
  #             number: 8080
---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: www.domain.com  # Replace with your www subdomain
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: my-service
#                 port:
#                   number: 80
